benchmark-results/8/merge/cseq/concurrentwitness2test.2024-11-27_10-15-16.logfiles/SV-COMP23_unreach-call.cseq-safe019_power.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe019_power.opt.yml/safe019_power.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe019_power.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_8zoxzcd1/tmp/tmpkao0sqxy.c
Compilation started
/tmp/BenchExec_run_8zoxzcd1/tmp/tmpkao0sqxy.c: In function ‘P0’:
/tmp/BenchExec_run_8zoxzcd1/tmp/tmpkao0sqxy.c:589:19: error: ‘FALSE’ undeclared (first use in this function)
  589 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_8zoxzcd1/tmp/tmpkao0sqxy.c:589:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_8zoxzcd1/tmp/tmpkao0sqxy.c: In function ‘P2’:
/tmp/BenchExec_run_8zoxzcd1/tmp/tmpkao0sqxy.c:647:19: error: ‘TRUE’ undeclared (first use in this function)
  647 |   weak$$choice0 = TRUE;;
      |                   ^~~~
/tmp/BenchExec_run_8zoxzcd1/tmp/tmpkao0sqxy.c:651:19: error: ‘FALSE’ undeclared (first use in this function)
  651 |   weak$$choice1 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_8zoxzcd1/tmp/tmpkao0sqxy.c: In function ‘main’:
/tmp/BenchExec_run_8zoxzcd1/tmp/tmpkao0sqxy.c:751:19: error: ‘TRUE’ undeclared (first use in this function)
  751 |   weak$$choice1 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
